Eliminate vulnerabilita' di sicurezza dovute a codice non piu' utilizzato per le chiamate di GovPay verso l'esterno.